# openapi-ts-fetch

./: .gitignore  LICENSE  README.md  generate.py  pyproject.toml  runtime-template.ts
.github/workflows/: ci.yml  publish.yml
examples/: advanced.json  bugfix_021.json  petstore.json
tests/: test_advanced.py  test_bugfix_021.py  test_generate.py
