[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi-ts-fetch"
version = "0.1.0"
description = "Lightweight Python OpenAPI 3.x → TypeScript fetch client generator. Zero Java, zero npm."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Max Health Inc." }]
keywords = ["openapi", "typescript", "fetch", "codegen", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/Max-Health-Inc/openapi-ts-fetch"
Repository = "https://github.com/Max-Health-Inc/openapi-ts-fetch"
Issues = "https://github.com/Max-Health-Inc/openapi-ts-fetch/issues"

[project.scripts]
openapi-ts-fetch = "generate:main"

[tool.setuptools]
py-modules = ["generate"]

[tool.setuptools.package-data]
"*" = ["runtime-template.ts"]
