[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-ts-fetch"
version = "0.2.0"
description = "Lightweight Python OpenAPI 3.x → TypeScript fetch client generator. Zero Java, zero npm."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Max Health Inc." }]
keywords = ["openapi", "typescript", "fetch", "codegen", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/Max-Health-Inc/openapi-ts-fetch"
Repository = "https://github.com/Max-Health-Inc/openapi-ts-fetch"
Issues = "https://github.com/Max-Health-Inc/openapi-ts-fetch/issues"

[project.scripts]
openapi-ts-fetch = "generate:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.uv]
required-version = ">=0.11"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = ["generate.py", "runtime-template.ts", "LICENSE", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
